OD-10995 payer select z-index fix
git-svn-id: https://svn.ish.com.au/ish/willow/trunk@48257 fb2e276d-fae9-0310-b578-b71ac85840b9

--- a/checkout/src/scss/checkout/_payment-tab.scss
+++ b/checkout/src/scss/checkout/_payment-tab.scss
@@ -99,7 +99,7 @@
       
       .payer-selection {
         position: absolute;
-        z-index:999;
+        z-index: 100;
         top: 50px;
         right: 20px;
         
